--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -35,6 +35,14 @@
 		    margin-right: auto;
 		    display: block;
 		}
+
+		#myCanvas {
+			padding-left: 0;
+		    padding-right: 0;
+		    margin-left: auto;
+		    margin-right: auto;
+		    display: block;
+		}
 	</style>
 
 	<script type="text/javascript" canvas="canvas">
