--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -5,121 +5,169 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   	<title>P3 Coloring</title>
-
+	<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'coloring/vendors/bootstrap/css/bootstrap.css' %}" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script type="text/javascript" src="{% static 'coloring/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'coloring/vendors/paper/paper-full.min.js' %}"></script>
 <!-- Hello! -->
-	<style type="text/css">
-		#color-palette {
-			width: 300px;
-			background-color: #f1f1f1;
-			display: flex;
-			flex-wrap: wrap;
-			position: absolute;
-			top: 0;
-		}
+<style type="text/css">
+	#color-palette {
+		width: 300px;
+		background-color: #f1f1f1;
+		display: flex;
+		flex-wrap: wrap;
+		position: absolute;
+		top: 0;
+	}
 
-		.swatch {
-			width: 24px;
-			height: 24px;
-			-moz-border-radius: 12px;
-			-webkit-border-radius: 12px;
-			border-radius: 12px;
-			margin: 3px;
-		}
+	.swatch {
+		width: 24px;
+		height: 24px;
+		-moz-border-radius: 12px;
+		-webkit-border-radius: 12px;
+		border-radius: 12px;
+		margin: 3px;
+	}
 
-		#myCanvas {
-			padding-left: 0;
-		    padding-right: 0;
-		    margin-left: auto;
-		    margin-right: auto;
-		    display: block;
-		}
-	</style>
+	#myCanvas {
+		padding-left: 0;
+		padding-right: 0;
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+</style>
 
-	<script type="text/javascript" canvas="canvas">
-		window.onload = function() {
-			var canvas = document.getElementById('myCanvas');
+<script type="text/javascript" canvas="canvas">
+	var pencil, fill;
+	function undo() {};
+	function redo() {};
+	window.onload = function() {
+		var canvas = document.getElementById('myCanvas');
 
-			// coloring page
-			var mandala = {
-				item: null,
-				lastClicked: null,
-				filePath: '/static/coloring/images/mandala-freepik.svg'
-			};
+		function init(custom){
+			paper.setup(canvas);
+			with(paper) {
+				// var point1 = new Point(100, 100);
+				// var point2 = new Point(100, 0);
 
-			// color palette
-			var cp = {
-				history: ["#000000"], // black selected by default
-				options: [],
-				$container: $('#color-palette')
-			}
+				// var a = new Color(1,0,0,1);
+				// var b = new Color(0,1,0,1);
 
-			function myCustomInteraction() {
-				var tool = new paper.Tool();
+				// var myPath = new Path();
+				// myPath.strokeColor = "purple"
 
-				tool.onMouseDown = function (event) {
-				    var hit = mandala.item.hitTest(event.point, { tolerance: 10, fill: true });
-				    if (hit) {
-				    		// Color pallette keeps track of the full history of colors, though we
-				    		// only color in with the most-recent color.
-				        hit.item.fillColor = cp.history[cp.history.length - 1];
-				    }
+				// myPath.add(point1, point2);
+				// myPath.add(new Point(200, 100));
+				// myPath.add(point1);
+				// myPath.fillColor = "green";
+				
+
+
+				pencil = new Tool();
+				var paths = [];
+				var undonePaths = [];
+				var picture = new Group();
+				var curPath = null;
+
+
+				pencil.onMouseDown = function(event) {
+					paths.push(new Path());
+					curPath = paths[paths.length - 1];
+					curPath.strokeColor = "purple";
+					
+					console.log("hi");
 				}
-			}
-
-			// create a color palette with the given colors
-			function createColorPalette(colors){
-
-				// create a swatch for each color
-				for (var i = colors.length - 1; i >= 0; i--) {
-					var $swatch = $("<div>").css("background-color", colors[i])
-									   .addClass("swatch");
-					$swatch.click(function(){
-						// add color to the color palette history
-					  	cp.history.push($(this).css("background-color"));
-					});
-					cp.$container.append($swatch);
+				pencil.onMouseDrag = function(event) {
+					curPath.add(event.point);
 				}
-			}
-
-			// loads a set of colors from a json to create a color palette
-			function getColorsCreatePalette(){
-				cp.$container.html(" ");
-				$.getJSON('/static/coloring/vendors/material/material-colors.json', function(colors){
-					var keys = Object.keys(colors);
-					for (var i = keys.length - 1; i >= 0; i--) {
-						cp.options.push(colors[keys[i]][500]);
+				pencil.onMouseUp = function(event) {
+					if(event.point.getDistance(curPath.firstSegment.point) < 20) {
+						curPath.closed = true;
+						curPath.fill = true;
+						curPath.fillColor = "red";
+						curPath.fillColor.alpha = .0000001; //This is the best workaround I've ever devised. -Nicholas
 					}
-					createColorPalette(cp.options);
-				});
+					
+					picture.addChild(curPath);
+					console.log(picture.children)
+				}
+
+				fill = new Tool();
+				fill.onMouseDown = function(event) {
+					console.log("clicked fill");
+					var hit = picture.hitTest(event.point, { tolerance: 10, segments: true, stroke: true, fill: true});
+					if (hit) {
+						hit.item.fillColor = "black";
+					} else {
+						console.log("no hit")
+					}
+				}
+
+
+				undo = function(){
+					if (paths.length == 0){
+						return;
+					}
+					var p = paths.pop();
+					undonePaths.push(p.exportJSON());
+					p.remove();
+
+				}
+				redo = function(){
+					if (undonePaths.length == 0) {
+						return;
+					}
+
+					var p = undonePaths.pop();
+					var np = new Path();
+					np.importJSON(p);
+					paths.push(np);
+				}
 			}
-
-			function init(custom){
-				paper.setup(canvas);
-				getColorsCreatePalette();
-
-				paper.project.importSVG(mandala.filePath, function(item) {
-					mandala.item = item._children["design-freepik"];
-				    paper.project.insertLayer(0,mandala.item);
-
-				    if (custom) {
-				    	myCustomInteraction();
-				    } else {
-				    	myGradientInteraction();
-				    }
-
-				});
-			}
-
-			// Set up the mandala interactivity.
-			init(true);
 		}
-	</script>
+
+		// Set up the mandala interactivity.
+		init(true);
+	}
+</script>
 </head>
 <body>
-
-	<canvas id="myCanvas" width="750px" height="750px"></canvas>
-	<div id="color-palette"></div>
+	<div class="container-fluid" style="height: 100vh; background-image: url(./../static/coloring/images/pad.png); background-size: 100% 100%;">
+		<div class="row" style="padding-top: 0; margin-top: 0; height: 16.6vw">
+			<div class="col-2 padButton">
+				<i class="bi bi-house-door-fill"></i>
+			</div>
+			<div class="col-2 padButton" onclick="undo()">
+				<i class="bi bi-arrow-counterclockwise"></i>
+			</div>
+			<div class="col-2 padButton" onclick="redo()">
+				<i class="bi bi-arrow-clockwise"></i>
+			</div>
+			<div class="col-2 padButton">
+				<i class="bi bi-save2-fill"></i>
+			</div>
+			<div class="col-4">
+				Select Color
+			</div>
+		</div>
+		
+		
+		<canvas id="myCanvas" width="750px" height="750px" style="width: 90vw; height: 80vh;"></canvas>
+		<div class="row" style="position: absolute; top: 80vh; left: 0; height: 20vh; width: 100vw;">
+			<div class="col-1"></div>
+			<div class="col-2" style="background-color: grey;" href="#" onclick="pencil.activate();">
+			</div>
+			<div class="col-2" style="background-color: black;"></div>
+			<div class="col-2" style="background-color: yellow;"></div>
+			<div class="col-2" style="background-color: white;"></div>
+			<div class="col-2" style="background-color: red;" href="#" onclick="fill.activate();">
+			</div>
+			<div class="col-1"></div>
+		</div>
+		
+	</div>
+	
 </body>
 </html>
