--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -134,7 +134,7 @@
 </script>
 </head>
 <body>
-	<div class="container-fluid" style="height: 100vh; background-image: url(./../static/coloring/images/pad.png); background-size: 100% 100%;">
+	<div class="container-fluid" style="height: 100vh; background-image: url(./../static/coloring/images/pexels-fwstudio-172296.jpeg); background-size: 100% 100%;">
 		<div class="row" style="padding-top: 0; margin-top: 0; height: 16.6vw">
 			<div class="col-2 padButton">
 				<i class="bi bi-house-door-fill"></i>
@@ -152,9 +152,11 @@
 				Select Color
 			</div>
 		</div>
+		<div id="psheet">
+			<canvas id="myCanvas" width="750px" height="750px" style="width: 87vw; height: 73vh;"></canvas>
+		</div>
 		
 		
-		<canvas id="myCanvas" width="750px" height="750px" style="width: 90vw; height: 80vh;"></canvas>
 		<div class="row" style="position: absolute; top: 80vh; left: 0; height: 20vh; width: 100vw;">
 			<div class="col-1"></div>
 			<div class="col-2" style="background-color: grey;" href="#" onclick="pencil.activate();">
