--- a/coloring/templates/coloring/home.html
+++ b/coloring/templates/coloring/home.html
@@ -4,42 +4,31 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  	<title>P3 Coloring</title>
-
+  	<title>P3 Home</title>
+	<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'coloring/vendors/bootstrap/css/bootstrap.css' %}" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script type="text/javascript" src="{% static 'coloring/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'coloring/vendors/paper/paper-full.min.js' %}"></script>
-<!-- Hello! -->
-	<style type="text/css">
-		#color-palette {
-			width: 300px;
-			background-color: #f1f1f1;
-			display: flex;
-			flex-wrap: wrap;
-			position: absolute;
-			top: 0;
-		}
 
-		.swatch {
-			width: 24px;
-			height: 24px;
-			-moz-border-radius: 12px;
-			-webkit-border-radius: 12px;
-			border-radius: 12px;
-			margin: 3px;
-		}
-
-		#myCanvas {
-			padding-left: 0;
-		    padding-right: 0;
-		    margin-left: auto;
-		    margin-right: auto;
-		    display: block;
-		}
-	</style>
 </head>
 <body>
-
-	<canvas id="myCanvas" width="750px" height="750px"></canvas>
-	<div id="color-palette"></div>
+	<div class="container-fluid" style="background-image: url(./../static/coloring/images/pexels-fwstudio-172296.jpeg); background-size: 100% 100%;">
+		<div class = "row" style="height: 15vh;"></div>
+		<div class = "row" style="height: 40vh;">
+			<div id="startPaper" onclick="location.href = 'new_interaction';">
+					<div id = "paperInterior">
+						Start 
+						Drawing
+					</div>
+			</div>
+		</div>
+		<div class = "row" style="height: 30vh;"></div>
+		<div class = "row" style="height: 15vh; background-color: orange;">
+			<div id="galleryButton" class="col-12" onclick="location.href = 'gallery';">
+					Gallery <i class="bi bi-images"></i>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
