--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -214,7 +214,7 @@
 					<div class="row">
 						<canvas id="saveCanvas" width="1000px" height="1400px" style="width: 100%; height: 100%;"></canvas>
 					</div>
-					<div class="row" style="font-size: 5vh; background-color: #83c5be; border-top-style: solid;">
+					<div class="row" style="font-size: 5vh; background-color: #83c5be; border-top-style: solid;" onclick="saveToGallery()">
 						<div class="col-12" style="text-align: center;">
 							Save To Gallery
 						</div>
@@ -288,9 +288,9 @@
 			$('body').on("click", "#fillDiv", pressFButton);
 
 			
-
+			var picToSave;
 			function saveClick(){
-				var picToSave = getPicJSON();
+				picToSave = getPicJSON();
 				console.log(picToSave);
 				saveScope.activate();
 				with(paper) {
@@ -304,7 +304,7 @@
 				nothing.activate();
 			}
 
-
+			//Base Modal code from W3school
 			// Get the modal
 			var modal = document.getElementById("myModal");
 
@@ -332,6 +332,17 @@
 			if (event.target == modal) {
 				modal.style.display = "none";
 			}
+			}
+
+			function saveToGallery() {
+				var savedPics = JSON.parse(localStorage.getItem("savedPics"));
+				if (savedPics == null) {
+					savedPics = [];
+				}
+				savedPics.push(picToSave);
+				console.log(savedPics);
+				localStorage.setItem("savedPics", JSON.stringify(savedPics));
+				location.href = 'gallery'
 			}
 	</script>
 </body>
