--- a/coloring/templates/coloring/gallery.html
+++ b/coloring/templates/coloring/gallery.html
@@ -5,9 +5,12 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   	<title>P3 Coloring</title>
-
+	<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static 'coloring/vendors/bootstrap/css/bootstrap.css' %}" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 	<script type="text/javascript" src="{% static 'coloring/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 	<script type="text/javascript" src="{% static 'coloring/vendors/paper/paper-full.min.js' %}"></script>
+
 <!-- Hello! -->
 	<style type="text/css">
 		#color-palette {
@@ -35,11 +38,199 @@
 		    margin-right: auto;
 		    display: block;
 		}
+
+		#GalleryTitle {
+			width: 500 px;
+			height: 200 px;
+			background: #E29578;
+		}
+
+		#titlePlate {
+			background: #E29578;
+		}
+
+		.galleryImage {
+			width: 550px;
+			height: 550px;
+			background: #f1f1f1;
+			padding: 5px;
+			margin: 10px 10px 10px 10px;
+			border: 5px solid #000000;
+		}
+
+		.galleryDate {
+			width: 450px;
+			height: 75px;
+			background: #f1f1f1;
+			padding: 5px;
+			margin: -14px 10px 0px 10px;
+			border: 5px solid #000000;	
+		}
+
+		/* The Modal (background) */
+		.modal {
+    		display: none; /* Hidden by default */
+    		position: fixed; /* Stay in place */
+    		z-index: 1; /* Sit on top */
+    		padding-top: 100px; /* Location of the box */
+    		left: 0;
+    		top: 0;
+    		width: 100%; /* Full width */
+    		height: 100%; /* Full height */
+    		overflow: auto; /* Enable scroll if needed */
+    		background-color: rgb(0,0,0); /* Fallback color */
+    		background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+		}
+
+		/* Modal Content */
+		.modal-content {
+    		background-color: #fefefe;
+    		margin: auto;
+    		padding: 10px;
+    		border: 1px solid #888;
+    		width: 100%;
+		}
+
+		/* The Close Button */
+		.close {
+    		color: #aaaaaa;
+    		float: right;
+    		font-size: 28px;
+    		font-weight: bold;
+		}
+
+		.close:hover,
+		.close:focus {
+    		color: #000;
+    		text-decoration: none;
+    		cursor: pointer;
+		}
 	</style>
 </head>
 <body>
-
-	<canvas id="myCanvas" width="750px" height="750px"></canvas>
-	<div id="color-palette"></div>
+	<div class="container-fluid">
+		<div class="row align-items-center" id = 'titlePlate'>
+			<div class="col-1">
+				<a href = '/coloring/home' class = 'btn btn-secondary' rolw = 'button' aria-pressed = 'true'>
+					<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+  						<path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+					</svg>
+				</a>
+			</div>
+			<div class="col-11 d-flex justify-content-center">
+				<h1 class = 'align-items-center'> Gallery </h1>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid" style="height: 95vh; background-image: url(./../static/coloring/images/Gallery.jpeg); background-size: 100% 100%;">
+		<div class = "row align-items-center"> 
+			<div class = 'col-6 col-sm-6 d-flex justify-content-center'>
+					<button id = "myBtn1" class = 'btn btn-info galleryImage' style = 'background-image: url(./../static/coloring/images/GalleryImage1.jpeg); background-size: scale-down; background-position: center'>
+					</button>
+					<div id = 'myModal1' class = 'modal'>
+    					<div class="modal-content">
+							<div class="modal-header">
+        						<button type="button" class="close1" data-dismiss="modal" aria-label="Close">
+          						<span aria-hidden="true">&times;</span>
+        						</button>
+      						</div>
+      						<div class="modal-body d-flex justify-content-center">
+								<img class="img-fluid" src="{% static 'coloring/images/GalleryImage1.jpeg' %}" style = "width: 1000px">
+							</div>
+      					</div>
+    				</div>
+			</div>
+			<div class = 'col-6 col-sm-6 d-flex justify-content-center'>
+				<button id = "myBtn2" class = 'btn btn-info galleryImage' style = 'background-image: url(./../static/coloring/images/GalleryImage2.jpeg); background-size: scale-down; background-position: center'>
+				</button>
+ 				<div id = 'myModal2' class = 'modal'>
+    				<div class="modal-content">
+						<div class="modal-header">
+        					<button type="button" class="close2" data-dismiss="modal" aria-label="Close">
+          					<span aria-hidden="true">&times;</span>
+        					</button>
+      					</div>
+      					<div class="modal-body d-flex justify-content-center">
+							<img class="img-fluid" src="{% static 'coloring/images/GalleryImage2.jpeg' %}" style = "width: 1000px">
+						</div>
+      				</div>
+    			</div>
+			</div>
+			<div class = "w-100 d-none d-md-block"></div>
+			<div class = "col-6 col-sm-6 d-flex justify-content-center">
+				<div class = "galleryDate" style = "background-color: 'grey'">
+				<h1 class = "d-flex justify-content-center"> 7-4-2021 </h1>
+				</div>
+			</div>
+			<div class = "col-6 col-sm-6 d-flex justify-content-center">
+				<div class = "galleryDate" style = "background-color: 'grey'">
+				<h1 class = "d-flex justify-content-center"> 6-23-2021 </h1>
+				</div>
+			</div>	
+		</div>
+		<div class = "row align-items-center"> 
+			<div class = 'col-6 col-sm-6 d-flex justify-content-center'>
+					<button id = "myBtn3" class = 'btn btn-info galleryImage' style = 'background-image: url(./../static/coloring/images/GalleryImage3.jpeg); background-size: scale-down; background-position: center'>
+					</button>
+					<div id = 'myModal3' class = 'modal'>
+    					<div class="modal-content">
+							<div class="modal-header">
+        						<button type="button" class="close3" data-dismiss="modal" aria-label="Close">
+          						<span aria-hidden="true">&times;</span>
+        						</button>
+      						</div>
+      						<div class="modal-body d-flex justify-content-center">
+								<img class="img-fluid" src="{% static 'coloring/images/GalleryImage3.jpeg' %}" style = "width: 1000px">
+							</div>
+      					</div>
+    				</div>
+			</div>
+			<div class = "w-100 d-none d-md-block"></div>
+			<div class = "col-6 col-sm-6 d-flex justify-content-center">
+				<div class = "galleryDate" style = "background-color: 'grey'">
+				<h1 class = "d-flex justify-content-center"> 6-9-2021 </h1>
+				</div>
+			</div>
+		</div>
+	</div>
+<script>
+	// Get modal
+	var modal1 = document.getElementById('myModal1');
+	var btn1 = document.getElementById("myBtn1");
+	var span1 = document.getElementsByClassName("close1")[0];
+	btn1.onclick = function() {
+    	modal1.style.display = "block";
+	}
+	span1.onclick = function() {
+    	modal1.style.display = "none";
+	}
+	// Get modal2
+	var modal2 = document.getElementById('myModal2');
+	var btn2 = document.getElementById("myBtn2");
+	var span2 = document.getElementsByClassName("close2")[0];
+	btn2.onclick = function() {
+    	modal2.style.display = "block";
+	}
+	span2.onclick = function() {
+    	modal2.style.display = "none";
+	}
+	// Get modal3
+	var modal3 = document.getElementById('myModal3');
+	var btn3 = document.getElementById("myBtn3");
+	var span3 = document.getElementsByClassName("close3")[0];
+	btn3.onclick = function() {
+    	modal3.style.display = "block";
+	}
+	span3.onclick = function() {
+    	modal3.style.display = "none";
+	}
+	window.onclick = function(event) {
+    	if (event.target == modal2 || event.target == modal1 || event.target == modal3) {
+        	modal1.style.display = "none";
+			modal2.style.display = "none";
+			modal3.style.display = "none";
+    	}
+	}
+</script>
 </body>
 </html>
