--- a/coloring/templates/coloring/new_interaction.html
+++ b/coloring/templates/coloring/new_interaction.html
@@ -286,12 +286,14 @@
 					<div class="row">
 						<canvas id="saveCanvas" width="1000px" height="1400px" style="width: 100%; height: 100%;"></canvas>
 					</div>
-					<div class="row" style="font-size: 5vh; background-color: #83c5be; border-top-style: solid;" onclick="saveToGallery()">
-						<div class="col-12" style="text-align: center;">
-							Save To Gallery
-						</div>
-					</div>
 				</div>
+				<a href = "/coloring/gallery" class = "btn d-flex justify-content-center" style="font-size: 5vh; background-color: #83c5be; border-style: solid; border-width: .3vh; border-color: #000000;" role = "button">
+						<div class="row" onclick="saveToGallery(); saveDateToGallery()">
+							<div class="col-12" style="text-align: center;">
+								Save To Gallery
+							</div>
+						</div>
+					</a>
 			</div>
 		</div>
 
@@ -319,7 +321,6 @@
 			</div>
 			<!-- <div class="col-1"></div> -->
 		</div>
-		
 	</div>
 	<script type="text/javascript">
 			var currToolButton = pressPButton;
@@ -432,6 +433,13 @@
 				console.log(savedPics);
 				localStorage.setItem("savedPics", JSON.stringify(savedPics));
 				// location.href = 'gallery'
+			}
+
+			function saveDateToGallery() {
+				var date = new Date();
+				var [month, day, year] = [date.getMonth() + 1, date.getDate(), date.getFullYear()];
+				var savedDate = "" + month + "-" + day + "-" + year;
+				localStorage.setItem("savedDate", savedDate);
 			}
 	</script>
 </body>
