--- a/coloring/templates/coloring/gallery.html
+++ b/coloring/templates/coloring/gallery.html
@@ -109,20 +109,28 @@
 </head>
 <body>
 	<div class="container-fluid">
-		<div class="row align-items-center" id = 'titlePlate'>
-			<div class="col-1">
-				<a href = '/coloring/home' class = 'btn btn-secondary' rolw = 'button' aria-pressed = 'true'>
-					<svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+		<div class="row align-items-center" id = 'titlePlate' style = "border: 5px solid #000000;">
+			<div class="col-2">
+				<a href = '/coloring/home' class = 'btn btn-secondary d-flex justify-content-center' rolw = 'button' aria-pressed = 'true'>
+					<svg xmlns="http://www.w3.org/2000/svg" width="120" height="=120" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
   						<path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
 					</svg>
 				</a>
 			</div>
-			<div class="col-11 d-flex justify-content-center">
-				<h1 class = 'align-items-center'> Gallery </h1>
+			<div class="col-8 d-flex justify-content-center" style = "border-left: 5px solid #000000; border-right: 5px solid #000000;">
+				<h1 style = "font-size: 8rem"> Gallery </h1>
+			</div>
+			<div class="col-2">
+				<a href = '/coloring/new_interaction' class = 'btn btn-secondary d-flex justify-content-center' rolw = 'button' aria-pressed = 'true'>
+					<svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+  						<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+  						<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+					</svg>
+				</a>
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid" style="height: 95vh; background-image: url(./../static/coloring/images/Gallery.jpeg); background-size: 100% 100%;">
+	<div class="container-fluid" style="height: 100vh; background-image: url(./../static/coloring/images/Gallery.jpeg); background-size: 100% 100%;">
 		<div class = "row align-items-center"> 
 			<div class = 'col-6 col-sm-6 d-flex justify-content-center'>
 					<button id = "myBtn1" class = 'btn btn-info galleryImage' style = 'background-image: url(./../static/coloring/images/GalleryImage1.jpeg); background-size: scale-down; background-position: center'>
